manifests/development/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend-development
  name: backend-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-development
  template:
    metadata:
      labels:
        app: backend-development
    spec:
      containers:
        - image: docker.io/asbjoern09/simple-fortune-cookie-backend:development
          name: backend-development
