manifests/development/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-development
  name: backend-development
spec:
  ports:
    - port: 9001
      protocol: TCP
      targetPort: 9000
  selector:
    app: backend-development
  type: ClusterIP
