manifests/development/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-development
  name: frontend-development
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8080
  selector:
    app: frontend-development
  type: NodePort
